friend/friendservice.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: friend
  name: friend
spec:
  ports:
  - name: "main"
    port: 80
    targetPort: 8081
  selector:
    app: friend
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: friend
  name: friend
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: friend
  template:
    metadata:
      labels:
        app: friend
    spec:
      containers:
      - env:
        - name: DATABASE_HOST
          value: den1.mysql6.gear.host
        - name: DATABASE_NAME
          value: coolfriends          
        - name: DATABASE_PASSWORD
          value: Ab77F-88M_9l
        - name: DATABASE_PORT
          value: "3306"
        - name: DATABASE_USER
          value: coolfriends
        image: eugeneywang/friend:latest
        name: friend
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: 400m
      restartPolicy: Always
